# starone

./: Makefile  Makefile.in  README  TODO  asteroid.c  asteroid.h  beam.c  beam.h  color.c  config.h  config.h.in  configure  configure.in  defs.h  explosion.c  explosion.h  gl_util.c  gl_util.h  list.c  list.h  main.c  particle.c  particle.h  pulse.c  pulse.h  ship.c  ship.h  texture.c  util.c
src/: Makefile  Makefile.in  asteroid.c  asteroid.h  beam.c  beam.h  collisions.c  collisions.h  color.h  defs.h  explosion.c  explosion.h  font.c  font.h  gameplay.c  gameplay.h  label.c  label.h  list.c  list.h  main.c  mainmenu.c  mainmenu.h  menu.c  menu.h  panic.h  particle.c  particle.h  pulse.c  pulse.h  ship.c  ship.h  texture.c  texture.h  util.h  vector2d.h
src/res/: asteroid.xcf
util/fontdump/: Makefile  dumpfont.c
