#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([FULL-PACKAGE-NAME], [VERSION], [BUG-REPORT-ADDRESS])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.
AC_CHECK_LIB([GL], [glNewList])
if test "x$ac_cv_lib_GL_glNewList" = "xno" ; then
	dnl Try MesaGL.
	AC_CHECK_LIB([MesaGL], [glNewList],,
		     AC_MSG_ERROR([GL library was not found]))
fi
AC_CHECK_LIB([GLU], [gluLookAt])
if test "x$ac_cv_lib_GLU_gluLookAt" = "xno" ; then
	dnl Try MesaGLU.
	AC_CHECK_LIB([MesaGLU], [gluLookAt],,
		     AC_MSG_ERROR([GLU library was not found]))
fi

AC_CHECK_LIB([dl], [dlinfo],,
	     AC_MSG_ERROR([libdl was not found]))
AC_CHECK_LIB([m], [sin],,
	     AC_MSG_ERROR([libm was not found]))
AC_CHECK_LIB([png], [png_init_io],,
	     AC_MSG_ERROR([libpng was not found]))
AC_CHECK_LIB([SDL], [SDL_Init],,
	     AC_MSG_ERROR([libsdl not was not found]))

# Checks for header files.
AC_CHECK_HEADERS([malloc.h stdlib.h string.h unistd.h SDL/SDL.h],,
		 AC_MSG_ERROR([Missing header]))

# Checks for typedefs, structures, and compiler characteristics.
AC_C_INLINE
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([strerror])

AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
